# ZTKN

./: .gitignore  LICENSE  README.md  THIRD-PARTY-NOTICES.md  build.bat  dev.bat
app/: package-lock.json  package.json
app/src-tauri/: Cargo.toml  build.rs  nsis-hooks.nsh  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  usage.rs
app/src-tauri/ztkn-hook/: Cargo.toml
app/src-tauri/ztkn-hook/src/: main.rs
app/src/lib/agents/: alerts.svelte.ts
app/src/lib/aida64/: import.ts
app/src/lib/assets/: library.svelte.ts
app/src/lib/components/: AssetLibrary.svelte  CanvasStage.svelte  Editor.svelte  Palette.svelte  Present.svelte  Properties.svelte
app/src/lib/editor/: autostart.svelte.ts  editorState.svelte.ts  monitors.svelte.ts  persist.ts  snap.test.ts  snap.ts  store.test.ts  store.ts  textAlign.test.ts  textAlign.ts  view.svelte.ts
app/src/lib/fonts/: installed.svelte.ts
app/src/lib/model/: panel.test.ts  panel.ts
app/src/lib/render/: datetime.test.ts  datetime.ts  draw.test.ts  draw.ts  format.countdown.test.ts  format.test.ts  format.ts  gauge.test.ts  gauge.ts  graph.test.ts  graph.ts  images.ts
app/src/lib/sensors/: dummy.test.ts  dummy.ts  live.svelte.ts  loop.ts  match.ts
app/src/lib/templates/: default.ts  dense.ts  index.ts  minimal.ts  neon.ts
app/src/routes/: +page.svelte
docs/images/: README.md
docs/plans/: 2026-06-27-pc-status-panel-design.md  2026-06-27-pc-status-panel-phase1-plan.md
tools/: build-sidecar.ps1  dev-admin.ps1
tools/sensor-sidecar/: Program.cs  out.txt  sensor-sidecar.csproj
